crates/panache-parser/tests/snapshots/yaml__yaml_suite_3RLN__02.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: 3RLN/02
input: "\"3 leading\n    \ttab\"\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
