crates/panache-parser/tests/snapshots/yaml__yaml_suite_3RLN__03.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: 3RLN/03
input: "\"4 leading\n    \\t  tab\"\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
