crates/panache-parser/tests/snapshots/yaml__yaml_suite_3RLN__04.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: 3RLN/04
input: "\"5 leading\n    \\\t  tab\"\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
